--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -25,7 +25,7 @@
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
           <button class="btn btn-outline-success" type="submit">Search</button>
-          <a href=><img src="{% static 'images/account.PNG' %}" height="20px" width="20px" alt="">
+          <a href="login.html"><img src="{% static 'images/account.PNG' %}" height="20px" width="20px" alt="">
           <label for="" style="color: white;">account</label>
           </a>
            
