--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -24,8 +24,8 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
-          <button class="btn btn-outline-success" type="submit">Search</button>
-          <a href="login.html"><img src="{% static 'images/account.PNG' %}" height="20px" width="20px" alt="">
+          
+          <a href="login.html"><img src="{% static 'images/account.PNG' %}" height="20px" width="20px" alt="a">
           <label for="" style="color: white;">account</label>
           </a>
            
@@ -37,15 +37,15 @@
     <div class="container-fluid">
       <table>
         <tr>
-          <td ><a class="nav-link active" aria-current="page" href="#">DINING</a></td>
-          <td ><a class="nav-link active" aria-current="page" href="#">LIGHTING</a></td>
-          <td><a href=""><a class="nav-link active" aria-current="page" href="#">GARDEN</a></td>
-          <td><a class="nav-link active" aria-current="page" href="#">DRESS</a></td>
-          <td><a href=""><a class="nav-link active" aria-current="page" href="#">GIFTING</a></a></td>
-           <td><a class="nav-link active" aria-current="page" href="#">FURNITURES</a></td>
-            <td><a class="nav-link active" aria-current="page" href="#">DECOR</a></td>
-            <td><a class="nav-link active" aria-current="page" href="#">NEW</a></td>
-            <td><a class="nav-link active" aria-current="page" href="#">MORE</a></td>
+          <td ><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DINING</font></a></td>
+          <td ><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">LIGHTING</font></a></td>
+          <td><a href=""><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">GARDEN</font></a></td>
+          <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DRESS</font></a></td>
+          <td><a href=""><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">>GIFTING</font></a></td>
+           <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">FURNITURES</font></a></td>
+            <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DECOR</font></a></td>
+            <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">NEW</font></a></td>
+            <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">MORE</font></a></td>
           </tr>
       </table>
       
