--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -35,13 +35,13 @@
   </nav>
   <nav class="navbar navbar-expand-lg navbar-dark bg-light">
     <div class="container-fluid">
-      <table>
+      <table cellpadding="30px" cellspacing="20px" align="center">
         <tr>
           <td ><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DINING</font></a></td>
           <td ><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">LIGHTING</font></a></td>
           <td><a href=""><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">GARDEN</font></a></td>
           <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DRESS</font></a></td>
-          <td><a href=""><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">>GIFTING</font></a></td>
+          <td><a href=""><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">GIFTING</font></a></td>
            <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">FURNITURES</font></a></td>
             <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DECOR</font></a></td>
             <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">NEW</font></a></td>
@@ -100,12 +100,12 @@
   </div>
    <br><br>
 
-   <h1 align="left"><font face="verdana">shop by category</font></h1>
+   <h1 cellpadding="30px" cellspacing="20px" align="left"><font face="verdana">shop by category</font></h1>
    <br><br>
    <div>
-     <table>
-       <tr>
-         <td><img src="{% static 'images/spicebox.PNG' %}" height="200px" width="200px" alt=""></td>
+     <table cellpadding="30px" cellspacing="20px">
+       <tr >
+         <td ><img src="{% static 'images/spicebox.PNG' %}" height="200px" width="200px" alt=""></td>
          <td><img src="{% static 'images/plates.PNG' %}" height="200px" width="200px" alt=""></td>
          <td><img src="{% static 'images/TABLE LAMP.PNG'%}" height="200px" width="200px" alt=""></td>
          <td><img src="{% static 'images/bowl.PNG' %}" height="200px" width="200px" alt=""></td>
