--- a/craft_shop/templates/login.html
+++ b/craft_shop/templates/login.html
@@ -35,7 +35,7 @@
       </nav>
       <nav class="navbar navbar-expand-lg navbar-dark bg-light">
         <div class="container-fluid">
-          <table>
+          <table cellpadding="30px" cellspacing="20px" align="center">
             <tr>
                 
               <td ><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DINING</font></a></td>
