--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>craftshop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-    <div class="container-fluid">
-      <a class="navbar-brand  fst-italic"  href="#" ><font size="6">craft shop</font></a>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
+    <div class="container-fluid" >
+      <a class="navbar-brand  fst-italic"  href="#" ><img src="{% static 'images/logo.PNG' %}" height="50px" width="50px" alt=""><font style="color:darkblue;" size="6">craft shop</font></a>
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 500px;">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,12 +25,17 @@
           
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
-          
-          <a href="login.html"><img src="{% static 'images/account.PNG' %}" height="20px" width="20px" alt="a">
-          <label for="" style="color: white;">account</label>
-          </a>
-           
+          <table cellpadding="30" cellspacing="30">
+            <tr>
+         <td> <label for="" style="color: black;" ><font size="4" face="verdana"> Home</font></label></td>
+       
+        
+        <td>  <a href="{% url 'login' %}"><img src="{% static 'images/account.PNG' %}" height="30px" width="30px" alt="a">
+          <label for="" style="color:black;"><font size="4" face="verdana">account</font></label></td>
+          <td><a href=""><img src="{%  static 'images/cart2.PNG' %}" height="30px" width="30px" alt=""><label for="" style="color:black;"><font size="4" face="verdana">cart</font></label></a></td>
+        </tr>
+        </a>
+        </table>
         </form>
       </div>
     </div>
@@ -92,18 +99,23 @@
   </div>
   <br>
   <br>
-  <div align="center">
+  <div >
     <center><h1><font face="verdana">HANDCRAFTED IN INDIA</font></h1></center>
   <br>
   <div align="center">
     <p><font size="5" face="verdana">Craft shop is an online craft brand started in 2012 with a vision to promote Indian handicrafts globally & help small artisans based in different parts of India earn a living out of it. Amazing Traditional Indian Handicrafts You will Love.</font> </p>
   </div>
    <br><br>
-
-   <h1 cellpadding="30px" cellspacing="20px" align="left"><font face="verdana">shop by category</font></h1>
-   <br><br>
-   <div>
+    <table border="0" cellpadding="50px"  >
+      <tr><td>
+   <h1><font face="verdana">shop by category</font></h1>
+  </td>
+  </tr>
+  </table>
+  <br><br>
+   <div align="center">
      <table cellpadding="30px" cellspacing="20px">
+       
        <tr >
          <td ><img src="{% static 'images/spicebox.PNG' %}" height="200px" width="200px" alt=""></td>
          <td><img src="{% static 'images/plates.PNG' %}" height="200px" width="200px" alt=""></td>
