--- a/craft_shop/templates/login.html
+++ b/craft_shop/templates/login.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>craftshop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -12,9 +13,10 @@
 </head>
 <body>
     <div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
         <div class="container-fluid">
-          <a class="navbar-brand  fst-italic"  href="#" ><font size="6">craft shop</font></a>
+          <a class="navbar-brand  fst-italic"  href="#" ><font size="6"  style="color:darkblue;"><img src="{% static 'images/logo.PNG' %}" height="50px" width="50px" alt=""><font style="color:darkblue;" size="6"></font>craft shop</font></a>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 500px;">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,12 +25,17 @@
               
             </ul>
             <form class="d-flex" >
-             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
-            
-              <a href=><img src="{% static 'images/account.PNG' %}" height="20px" width="20px" alt="a">
-              <label for="" style="color: white;">account</label>
-              </a>
-               
+              <table cellpadding="30" cellspacing="30">
+                <tr>
+              <td><a href="{% url 'home' %}">
+                 <label for="" style="color:black;"><font size="4" face="verdana"> Home</font></label>
+                </a></td>
+              <td><a href=><img src="{% static 'images/account.PNG' %}" height="30px" width="30px" alt="a">
+              <label for="" style="color:black;"><font size="4" face="verdana">account</font></label>
+              </a></td>
+              <td><a href=""><img src="{%  static 'images/cart2.PNG' %}" height="30px" width="30px" alt=""><label for="" style="color:black;"><font size="4" face="verdana">cart</font></label></a></td>
+              </tr>
+            </table> 
             </form>
           </div>
         </div>
