--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -1,135 +1,142 @@
+{% extends 'master.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>craftshop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</head>
-<body>
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
-    <div class="container-fluid" >
-      <a class="navbar-brand  fst-italic"  href="#" ><img src="{% static 'images/logo.PNG' %}" height="50px" width="50px" alt=""><font style="color:darkblue;" size="6">craft shop</font></a>
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 500px;">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          
-        </ul>
-        <form class="d-flex">
-          <table cellpadding="30" cellspacing="30">
-            <tr>
-         <td> <label for="" style="color: black;" ><font size="4" face="verdana"> Home</font></label></td>
-       
-        
-        <td>  <a href="{% url 'login' %}"><img src="{% static 'images/account.PNG' %}" height="30px" width="30px" alt="a">
-          <label for="" style="color:black;"><font size="4" face="verdana">account</font></label></td>
-          <td><a href=""><img src="{%  static 'images/cart2.PNG' %}" height="30px" width="30px" alt=""><label for="" style="color:black;"><font size="4" face="verdana">cart</font></label></a></td>
-        </tr>
-        </a>
-        </table>
-        </form>
-      </div>
-    </div>
-  </nav>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-    <div class="container-fluid">
-      <table cellpadding="30px" cellspacing="20px" align="center">
-        <tr>
-          <td ><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DINING</font></a></td>
-          <td ><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">LIGHTING</font></a></td>
-          <td><a href=""><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">GARDEN</font></a></td>
-          <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DRESS</font></a></td>
-          <td><a href=""><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">GIFTING</font></a></td>
-           <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">FURNITURES</font></a></td>
-            <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">DECOR</font></a></td>
-            <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">NEW</font></a></td>
-            <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">MORE</font></a></td>
-          </tr>
-      </table>
-      
-    </div>
-  </nav>
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'images/pic1.PNG' %}" height="600px" width="1200px"class="d-block w-100"alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'images/pc1.PNG' %}" height="600px" width="1200px" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'images/pc4.PNG' %}" height="600px" width="1200px" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  
-  </div>
-  <br>
-  <br>
-  <div >
-    <center><h1><font face="verdana">HANDCRAFTED IN INDIA</font></h1></center>
-  <br>
-  <div align="center">
-    <p><font size="5" face="verdana">Craft shop is an online craft brand started in 2012 with a vision to promote Indian handicrafts globally & help small artisans based in different parts of India earn a living out of it. Amazing Traditional Indian Handicrafts You will Love.</font> </p>
-  </div>
-   <br><br>
-    <table border="0" cellpadding="50px"  >
-      <tr><td>
-   <h1><font face="verdana">shop by category</font></h1>
-  </td>
-  </tr>
+{% block content %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-light">
+<div class="container-fluid " style=" margin-top: 50px; ">
+  <table cellpadding="30px" cellspacing="20px" align="center">
+    <tr>
+      <td ><a class="nav-link active" aria-current="page" href="{% url 'dining' %}"><font style="color: black;">DINING</font></a></td>
+      <td ><a class="nav-link active" aria-current="page" href="{% url 'lighting' %}"><font style="color: black;">LIGHTING</font></a></td>
+      <td><a class="nav-link active" aria-current="page" href="{% url 'garden' %}"><font style="color: black;">GARDEN</font></a></td>
+      <td><a class="nav-link active" aria-current="page" href="{% url 'dress' %}"><font style="color: black;">DRESS</font></a></td>
+      <td><a class="nav-link active" aria-current="page" href="{% url 'gift' %}"><font style="color: black;">GIFTING</font></a></td>
+       <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">FURNITURES</font></a></td>
+        <td><a class="nav-link active" aria-current="page" href="{% url 'decor' %}"><font style="color: black;">DECOR</font></a></td>
+        <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">NEW</font></a></td>
+        <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">MORE</font></a></td>
+      </tr>
   </table>
-  <br><br>
-   <div align="center">
-     <table cellpadding="30px" cellspacing="20px">
-       
-       <tr >
-         <td ><img src="{% static 'images/spicebox.PNG' %}" height="200px" width="200px" alt=""></td>
-         <td><img src="{% static 'images/plates.PNG' %}" height="200px" width="200px" alt=""></td>
-         <td><img src="{% static 'images/TABLE LAMP.PNG'%}" height="200px" width="200px" alt=""></td>
-         <td><img src="{% static 'images/bowl.PNG' %}" height="200px" width="200px" alt=""></td>
-      </tr>
-      <tr>
-        <td><a class="nav-link active text-dark" aria-current="page" href="#">Spice Box</a></td>
-        <td><a class="nav-link active text-dark" aria-current="page" href="#">Plates</a></td>
-        <td><a class="nav-link active text-dark" aria-current="page" href="#">Table Lamps</a></td>
-        <td><a class="nav-link active text-dark" aria-current="page" href="#">Bowls</a></td>
-      </tr>
-     </table>
-   </div>
+  
+</div>
+</nav>
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+<div class="carousel-indicators">
+  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+</div>
+<div class="carousel-inner">
+  <div class="carousel-item active">
+    <img src="{% static 'images/pic2.jpg' %}" height="500px" width="1200px"class="d-block w-100"alt="...">
+    <div class="carousel-caption d-none d-md-block">
+      <h5>First slide label</h5>
+      <p>Some representative placeholder content for the first slide.</p>
+    </div>
   </div>
-</body>
-</html>
+  <div class="carousel-item">
+    <img src="{% static 'images/pc1.PNG' %}" height="500px" width="1200px" class="d-block w-100" alt="...">
+    <div class="carousel-caption d-none d-md-block">
+      <h5>Second slide label</h5>
+      <p>Some representative placeholder content for the second slide.</p>
+    </div>
+  </div>
+  <div class="carousel-item">
+    <img src="{% static 'images/pic1.PNG' %}" height="500px" width="1200px" class="d-block w-100" alt="...">
+    <div class="carousel-caption d-none d-md-block">
+      <h5>Third slide label</h5>
+      <p>Some representative placeholder content for the third slide.</p>
+    </div>
+  </div>
+</div>
+<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="visually-hidden">Previous</span>
+</button>
+<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="visually-hidden">Next</span>
+</button>
+
+</div>
+<br>
+<br>
+<div >
+<center><h1><font face="verdana">HANDCRAFTED IN INDIA</font></h1></center>
+<br>
+<div align="center">
+<p><font size="5" face="verdana">Craft shop is an online craft brand started in 2022 with a vision to promote Indian handicrafts globally & help small artisans based in different parts of India earn a living out of it. Amazing Traditional Indian Handicrafts You will Love.</font> </p>
+</div>
+<br><br>
+<table border="0" cellpadding="50px"  >
+  <tr><td>
+<h1><font face="verdana">shop by category</font></h1>
+</td>
+</tr>
+</table>
+<br><br>
+<div align="center">
+ <table cellpadding="30px" cellspacing="20px">
+   
+   <tr >
+     <td ><img src="{% static 'images/spicebox.PNG' %}" height="300px" width="300px" alt=""></td>
+     <td><img src="{% static 'images/plates.PNG' %}" height="300px" width="300px" alt=""></td>
+     <td><img src="{% static 'images/TABLE LAMP.PNG'%}" height="300px" width="300px" alt=""></td>
+     <td><img src="{% static 'images/bowl.PNG' %}" height="300px" width="300px" alt=""></td>
+  </tr>
+  <tr>
+    <td><a class="nav-link active text-dark" aria-current="page" href="#">Spice Box</a></td>
+    <td><a class="nav-link active text-dark" aria-current="page" href="#">Plates</a></td>
+    <td><a class="nav-link active text-dark" aria-current="page" href="#">Table Lamps</a></td>
+    <td><a class="nav-link active text-dark" aria-current="page" href="#">Bowls</a></td>
+  </tr>
+ </table>
+</div>
+</div>
+<!-- ......modal...... -->
+
+ <!-- <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-5">
+          <i class="fas fa-envelope prefix grey-text"></i>
+          <input type="email" id="defaultForm-email" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+        </div>
+
+        <div class="md-form mb-4">
+          <i class="fas fa-lock prefix grey-text"></i>
+          <input type="password" id="defaultForm-pass" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-default">Login</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="text-center">
+  <a href="" class="btn btn-default btn-rounded mb-4" data-toggle="modal" data-target="#modalLoginForm">Launch
+    Modal Login Form</a>
+</div>
+
+
+
+<script type="text/javascript">
+  $(window).on('load', function() {
+      $('#modalLoginForm').modal('show');
+  });
+  </script> -->
+
+{% endblock %}
