--- a/craft_shop/templates/login.html
+++ b/craft_shop/templates/login.html
@@ -1,21 +1,22 @@
-{% load static %}
+<!-- {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>craftshop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <title>craftshop login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+
 </head>
 <body>
+  <div>
     <div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
-        <div class="container-fluid">
-          <a class="navbar-brand  fst-italic"  href="#" ><font size="6"  style="color:darkblue;"><img src="{% static 'images/logo.PNG' %}" height="50px" width="50px" alt=""><font style="color:darkblue;" size="6"></font>craft shop</font></a>
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-pink">
+        <div class="container-fluid" >
+          <a class="navbar-brand  fst-italic"  href="{% url 'home' %}"><font size="6"  style="color:darkblue;"><img src="{% static 'images/logo.PNG' %}" height="50px" width="50px" alt=""><font style="color:darkblue;" size="6"></font>craft shop</font></a>
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 500px;">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,11 +26,9 @@
               
             </ul>
             <form class="d-flex" >
-              <table cellpadding="30" cellspacing="30">
-                <tr>
-              <td><a href="{% url 'home' %}">
-                 <label for="" style="color:black;"><font size="4" face="verdana"> Home</font></label>
-                </a></td>
+              <table cellpadding="30" cellspacing="30" align="right">
+                <tr align="left">
+              
               <td><a href=><img src="{% static 'images/account.PNG' %}" height="30px" width="30px" alt="a">
               <label for="" style="color:black;"><font size="4" face="verdana">account</font></label>
               </a></td>
@@ -61,39 +60,169 @@
           
         </div>
     </div>
+    <div style="background-image: url('/static/images/backgrd.jpg'); background-size: 1800px;" >
         <br>
-        <br>
-    <div align="center">
-        <table>
-            <h1>Login</h1>
-            <tr>
-                <td><label for="">Email</label></td>
-            </tr>
-                <br>
-             <tr>
-                <td ><input type="text" style="width: 300px; height: 200x;"   placeholder="email"></td>
-            </tr>
-                <br>
-            <tr>
-                <td><label for="">Password</label></td>
-            </tr> 
-                <br>
-             <tr>
-                <td><input type="password" style="width: 300px; height: 200x;" placeholder="password"></td>
-            </tr>
-            <tr>
-                <td ><a class="nav-link active " aria-current="page" href="#"><font style="color: black;"> Forgot password?</font></a></td>
-            </tr>
+        <br><br>
             
-            <tr >
-                <td ><a class="nav-link active badge bg-dark " aria-current="page" href="#" style="width: 300px; height: 30px;"><font size="3" style="color:white;"> Sign in</font></a></td>
-            </tr>
-        </table>
-
-
-
-
-
+           <h2 align="center">Login</h2>
+           <br><br><br>
+        <form align="center" border="1"  >
+          <div class="form-group row">
+            <label for="staticEmail" class="col-lg-4 col-form-label"><h4>EMAIL</h3></label>
+            <div class="col-lg-4">
+              <input type="text"  class="form-control" id="staticEmail" value="" placeholder="enter email" >
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputPassword" class="col-lg-4 col-form-label"><H4>PASSWORD</H3></label>
+            <div class="col-lg-4" >
+              <input type="password" class="form-control" id="inputPassword" placeholder="enter password">
+            </div>
+            <div class="col-auto">
+              <button type="submit" class="btn btn-primary mb-2">Submit</button>
+              
+            </div>
+          </div>
+          
+          <center><label for="">New to craft shop?</label></center>
+          <br>
+          <a    class="nav-link active badge bg-warning " aria-current="page" href="{% url 'signup' %}" style="width: 600px; height: 40px;"><font size="3" style="color:black;"> Sign up</font></a>
+        
+          
+        </form>
+      </div>
+  
     </div>
+  
+  
+  
+    
 </body>
-</html>
+</html> -->
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/login.css'%}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+</head>
+<style>
+   body {
+        background-color: url('/static/images/backgrd.jpg');
+         background-repeat: no-repeat;
+        background-size: cover;
+      }
+</style>
+<body>
+  <center>  <a class="navbar-brand  fst-italic"  href="{% url 'home' %}" > <font face="italic" style="color:rgb(248, 110, 133);" size="8">craft shop</font></a></center> 
+  <br>
+ 
+  <section class="vh-100" >
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col col-xl-10">
+          <div class="card" style="border-radius: 1rem;">
+            <div class="row g-0">
+              <div class="col-md-6 col-lg-5 d-none d-md-block">
+                <img src="{% static 'images/backgrd.jpg' %}" alt="" class="img-fluid" style="border-radius: 1rem 0 0 1rem; width: 600px; height: 700px;">
+              </div>
+              <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                <div class="card-body p-4 p-lg-5 text-black">
+  
+                  <form>
+  
+                    <div class="d-flex align-items-center mb-3 pb-1">
+                      <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                      <span class="h1 fw-bold mb-0">Log in</span>
+                    </div>
+  
+                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+  
+                    <div class="form-outline mb-4">
+                      <input type="email" id="username" class="form-control form-control-lg" />
+                      <label class="form-label" for="form2Example17">Email address</label><br>
+                      <span id="spn_usr" style="color: red;"></span>
+                    </div>
+  
+                    <div class="form-outline mb-4">
+                      <input type="password" id="password" class="form-control form-control-lg" />
+                      <label class="form-label" for="form2Example27">Password</label><br>
+                      <span id="spn_pass" style="color: red;"></span>
+                    </div>
+  
+                    <div class="pt-1 mb-4">
+                      <button class="btn btn-dark btn-lg btn-block" type="button" id="log_btn" onclick="validation()">Login</button>
+                    </div>
+  
+                    <a class="small text-muted" href="#!">Forgot password?</a>
+                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'signup' %}" style="color: #393f81;">sign up</a></p>
+                    <a href="#!" class="small text-muted">Terms of use.</a>
+                    <a href="#!" class="small text-muted">Privacy policy</a>
+                  </form>
+  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+    <script>
+
+function validation() {
+  var usr=document.getElementById("username")
+  var pass=document.getElementById("password")
+
+  if(usr.value==""){
+    document.getElementById("username").style.borderColor="red"
+    document.getElementById("spn_usr").innerHTML="please enter your user name"
+  }
+else {
+  document.getElementById("username").style.borderColor="black"
+    document.getElementById("spn_usr").innerHTML=""
+
+}
+
+if(pass.value==""){
+  document.getElementById("password").style.borderColor="red"
+  document.getElementById("spn_pass").innerHTML="please enter pasword"
+
+}
+else{
+  document.getElementById("password").style.borderColor="black"
+  document.getElementById("spn_pass").innerHTML=""
+
+}
+
+
+
+
+
+
+}
+
+
+
+
+
+    </script>
+
+
+
+
+
+
+
+
+
+
+</body>
+      </html>
