--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -3,6 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
 <div class="container-fluid " style=" margin-top: 50px; ">
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
   <table cellpadding="30px" cellspacing="20px" align="center">
     <tr>
       <td ><a class="nav-link active" aria-current="page" href="{% url 'dining' %}"><font style="color: black;">DINING</font></a></td>
@@ -16,9 +17,38 @@
         <td><a class="nav-link active" aria-current="page" href="#"><font style="color: black;">MORE</font></a></td>
       </tr>
   </table>
-  
+  </div>
 </div>
 </nav>
+
+<!-- ------nav2------ -->
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid" style=" margin-top: 100px; ">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Navbar</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Dining</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Lighting</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav> -->
+
+
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 <div class="carousel-indicators">
   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
