--- a/craft_shop/templates/master.html
+++ b/craft_shop/templates/master.html
@@ -93,12 +93,12 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>Craft Shop
           </h6>
-          <p>
+          <!-- <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
             dolor sit amet, consectetur adipisicing elit.
-          </p>
+          </p> -->
         </div>
         <!-- Grid column -->
 
@@ -109,16 +109,16 @@
             Products
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="{% url 'dining' %}" class="text-reset">Dining</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="{% url 'dress' %}" class="text-reset">Dress</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a href="{% url 'decor' %}" class="text-reset">Decor</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="{% url 'garden' %}" class="text-reset">Garden</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -150,13 +150,13 @@
           <h6 class="text-uppercase fw-bold mb-4">
             Contact
           </h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i> India</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@example.com
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <p><i class="fas fa-phone me-3"></i> +91 6282592720</p>
+          <!-- <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p> -->
         </div>
         <!-- Grid column -->
       </div>
