--- a/craft_shop/templates/garden.html
+++ b/craft_shop/templates/garden.html
@@ -2,6 +2,96 @@
 {% load static %}
 {% block content %}
 
+v<div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+      <div class="container-fluid" style=" margin-top: 100px; height: 50px; ">
+        <table cellpadding="30px" cellspacing="20px" align="center">
+          <tr>
+            <td><a class="nav-link active" aria-current="page" href="{% url 'dining' %}">
+                <font style="color: black;">DINING</font>
+              </a></td>
+            <td><a class="nav-link active" aria-current="page" href="{% url 'lighting' %}">
+                <font style="color: black;">LIGHTING</font>
+              </a></td>
+            <td><a class="nav-link active" aria-current="page" href="#">
+                <font style="color: black;">GARDEN</font>
+              </a></td>
+            <td><a class="nav-link active" aria-current="page" href="#">
+                <font style="color: black;">DRESS</font>
+              </a></td>
+            
+            
+            <td><a class="nav-link active" aria-current="page" href="{% url 'decor' %}">
+                <font style="color: black;">DECOR</font>
+              </a></td>
+           
+            
+          </tr>
+        </table>
+  
+      </div>
+    </nav>
+  </div>
+
+  <div>
+    <br>
+  
+    <div align="center">
+      <table border="0" cellpadding="15">
+        <tr>
+          <td>
+            <h1>All Kitchen & Dining</h1>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>
+              <font size="4" face="verdana"> Enhance the experience of culinary with kitchen
+                and dining accessories brought to you by Craft shop . The handmade wooden kitchen accessories
+                will add rich vibes of traditional flavours to your abode and will catch the eye of your guests.</font>
+            </p>
+            <hr>
+          </td>
+  
+        </tr>
+    </div>
+    </table>
+    <div align="center">
+      <table cellpadding="30px" cellspacing="20px">
+  
+        <tr>
+          <td><img src="{% static 'images/dress1.PNG' %}" height="300px" width="250px" alt=""></td>
+          <td><img src="{% static 'images/dress2.PNG' %}" height="300px" width="250px" alt=""></td>
+          <td><img src="{% static 'images/dress3.PNG'%}" height="300px" width="250px" alt=""></td>
+          <td><img src="{% static 'images/dress4.PNG' %}" height="300px" width="250px" alt=""></td>
+        </tr>
+        <tr>
+          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#"> W<br>
+            Beige & Black Embroidered Striped <br> Keyhole Neck Tiered Ethnic Maxi Dress <br> <span>
+                <font size="5">Rs:1,650.00</font>
+              </span></a></td>
+          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">W <br>
+            Women Lime Green <br> Solid Straight Kurta <br> <span>
+                <font size="5">Rs:1,149.00</font>
+              </span></a></td>
+          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">anayna<br>
+            Red & Blue Floral <br> Ethnic Maxi Dress<br> <span>
+                <font size="5">Rs:1,895.00</font>
+              </span></a></td>
+          <td><a class="nav-link active text-dark bg-light" aria-current="page" href="#">SASSAFRAS<br>
+            Yellow & Off-White  <br>Floral Printed Wrap Dress
+              H<br><span>
+                <font size="5">Rs:749.00</font>
+              </span></a></td>
+        </tr>
+      
+      </table>
+    </div>
+  
+  
+  
+  
+  </div>
 
 
 {% endblock %}
