--- a/craft_shop/templates/home.html
+++ b/craft_shop/templates/home.html
@@ -1,8 +1,9 @@
 {% extends 'master.html' %}
 {% load static %}
 {% block content %}
+<!-- <div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-<div class="container-fluid " style=" margin-top: 50px; ">
+<div class="container-fluid " style=" margin-top: 100px; ">
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
   <table cellpadding="30px" cellspacing="20px" align="center">
     <tr>
@@ -20,6 +21,52 @@
   </div>
 </div>
 </nav>
+</div> -->
+
+
+
+<!-- -------- -->
+
+<div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+    <div class="container-fluid" style=" margin-top: 100px; height: 50px; ">
+      <!-- <div class="container"> -->
+       
+      <table cellpadding="30px" cellspacing="20px" align="center">
+        <!-- <div class="row row-cols-1 row-cols-md-12">
+          <div class="col mb-12"> -->
+        <tr>
+          <td><a class="nav-link active" aria-current="page" href="{% url 'dining' %}">
+              <font style="color: black;">DINING</font>
+            </a></td>
+          <td><a class="nav-link active" aria-current="page" href="{% url 'lighting' %}">
+              <font style="color: black;">LIGHTING</font>
+            </a></td>
+          <td><a class="nav-link active" aria-current="page" href="{% url 'garden' %}">
+              <font style="color: black;">GARDEN</font>
+            </a></td>
+          <td><a class="nav-link active" aria-current="page" href="{% url 'dress' %}">
+              <font style="color: black;">DRESS</font>
+            </a></td>
+          
+         
+          <td><a class="nav-link active" aria-current="page" href="{% url 'decor' %}">
+              <font style="color: black;">DECOR</font>
+            </a></td>
+          
+         
+        </tr>
+          </div>
+        </div>
+      </table>
+           
+        
+
+    </div>
+  </nav>
+</div>
+
+
 
 <!-- ------nav2------ -->
 <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -59,22 +106,22 @@
   <div class="carousel-item active">
     <img src="{% static 'images/pic2.jpg' %}" height="500px" width="1200px"class="d-block w-100"alt="...">
     <div class="carousel-caption d-none d-md-block">
-      <h5>First slide label</h5>
-      <p>Some representative placeholder content for the first slide.</p>
+      <!-- <h5>First slide label</h5>
+      <p>Some representative placeholder content for the first slide.</p> -->
     </div>
   </div>
   <div class="carousel-item">
     <img src="{% static 'images/pc1.PNG' %}" height="500px" width="1200px" class="d-block w-100" alt="...">
     <div class="carousel-caption d-none d-md-block">
-      <h5>Second slide label</h5>
-      <p>Some representative placeholder content for the second slide.</p>
+      <!-- <h5>Second slide label</h5>
+      <p>Some representative placeholder content for the second slide.</p> -->
     </div>
   </div>
   <div class="carousel-item">
     <img src="{% static 'images/pic1.PNG' %}" height="500px" width="1200px" class="d-block w-100" alt="...">
     <div class="carousel-caption d-none d-md-block">
-      <h5>Third slide label</h5>
-      <p>Some representative placeholder content for the third slide.</p>
+      <!-- <h5>Third slide label</h5>
+      <p>Some representative placeholder content for the third slide.</p> -->
     </div>
   </div>
 </div>
@@ -105,7 +152,7 @@
 </table>
 <br><br>
 <div align="center">
- <table cellpadding="30px" cellspacing="20px">
+ <!-- <table cellpadding="30px" cellspacing="20px">
    
    <tr >
      <td ><img src="{% static 'images/spicebox.PNG' %}" height="300px" width="300px" alt=""></td>
@@ -119,7 +166,50 @@
     <td><a class="nav-link active text-dark" aria-current="page" href="#">Table Lamps</a></td>
     <td><a class="nav-link active text-dark" aria-current="page" href="#">Bowls</a></td>
   </tr>
- </table>
+ </table> -->
+
+ <!-- <div class="card" style="width: 18rem;">
+  <img src="{% static 'images/spicebox.PNG' %}" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title"><a href=""></a> Spicebox</h5>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="{% static 'images/spicebox.PNG' %}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"><a href=""></a> Spicebox</h5>
+    </div>
+
+  
+</div>
+</div> -->
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+          <div class="card">
+            <img src="{% static 'images/spicebox.PNG' %}" height="400px" width="300px" class="card-img-top" alt="...">
+            <div class="card-body">
+              <a href="" class="card-title"><font style="color: black;"><label for="">DINING</label></font></a  >
+            </div>
+          </div>
+        </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img src="{% static 'images/TABLE LAMP.PNG' %}"  height="400px" width="300px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <a href="#" class="card-title" style="color:black;"><font style="color: black;"><label for="">LIGHTING</label></font></a>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+          <div class="card">
+            <img src="{% static 'images/dress4.PNG' %}" height="400px" width="300px" class="card-img-top" alt="...">
+            <div class="card-body">
+              <a href="#" class="card-title"><font style="color: black;"><label for="">DRESS</label></font></a>
+            </div>
+          </div>
+      </div>
+  </div>
 </div>
 </div>
 <!-- ......modal...... -->
