--- a/craft_shop/templates/signup.html
+++ b/craft_shop/templates/signup.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div > 
+  <div class="container-fluid"> 
  <center>  <a class="navbar-brand  fst-italic"  href="{% url 'home' %}" ><font face="italic" style="color:rgb(248, 110, 133);" size="8">craft shop</font></a></center> 
  <br><br>
  <div     >
@@ -30,28 +30,25 @@
             </div>  
             <div class="mb-3">  
               <label for="" class="form-label">Email address</label>
-              <input type="email" class="form-control form-control-lg" id="Email" aria-describedby="emailHelp" placeholder="email">
+              <input type="text" class="form-control form-control-lg" id="Email" aria-describedby="emailHelp" placeholder="email">
               <span style="color: red;" id="span2"></span> <br>
             
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control form-control-lg" placeholder="At least 6 characters" id="password1">
+              <input type="text" class="form-control form-control-lg" placeholder="At least 6 characters" id="password1">
               <span style="color: red;" id="span3"></span> <br>
             </div>  
             
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password again</label>
-              <input type="password" class="form-control form-control-lg"  id="password2" placeholder="confirm password">
+              <input type="text" class="form-control form-control-lg"  id="password2" placeholder="confirm password">
               <span style="color: red;" id="span4"></span> <br>
             </div>
             
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
+            
             <div class="d-grid gap-2">
-              <button onclick="validate()" id="bt1" class="btn btn-warning" type="button">Sign up</button>
+              <button onclick="validation()" id="bt1" class="btn btn-warning" type="button">Sign up</button>
               
             </div>
             <br><br><br>
@@ -67,51 +64,59 @@
   </div>
  
  
-  <!-- <script>
+  <script>
+
+function validation() {
+            var name = document.getElementById("name")
+            var email = document.getElementById("email")
+            var password1 = document.getElementById("password1")
+            var password2 = document.getElementById("password2")
+
+            if (name.value == "") {
+                document.getElementById("name").style.borderColor="red"
+                
+                document.getElementById("span1").innerHTML="user name must be filled "
+            }
+
+            if (email.value == "") {
+                document.getElementById("email").style.borderColor="red"
+                
+                document.getElementById("span2").innerHTML="email must be filled "
+
+            }
 
 
-    function validate() {
-      var name = document.getElementById("name")
-      var email = document.getElementById("email")
-      var password1 = document.getElementById("password1")
-      var password2 = document.getElementById("password2")
+            if (password1.value == "") {
+                document.getElementById("password1").style.borderColor="red"
+               
+                document.getElementById("span3").innerHTML="password must be filled "
 
-      if (name.value == "") {
-        document.getElementById("name").style.borderColor = "red"
-        document.getElementById("span1").innerHTML = "please enter your user name"
-      }
-      else {
-        document.getElementById("name").style.borderColor = "black"
-        document.getElementById("span1").innerHTML = ""
+               
 
-      }
+            }
+            else if (password1.value.length < 6) {
+                document.getElementById("password1").style.borderColor="red"
+                
+                document.getElementById("span3").innerHTML="password must be at least 6 characters "
+        
+                
+           
+            }
+            else if (password1.value != password2.value) {
+               
+                document.getElementById("span4").innerHTML="password must be same "
 
-      if (email.value == "") {
-        document.getElementById("email").style.borderColor = "red"
-        document.getElementById("span2").innerHTML = "please enter pasword"
+                
+            }
 
-      }
-      else {
-        document.getElementById("email").style.borderColor = "black"
-        document.getElementById("span2").innerHTML = ""
+            
 
-      }
+        }
+    
+</script>
 
-      if (password1.value == "") {
-        document.getElementById("password1").style.borderColor = "red"
-        document.getElementById("span3").innerHTML = "please enter pasword"
 
-      }
-      else {
-        document.getElementById("password1").style.borderColor = "black"
-        document.getElementById("span3").innerHTML = ""
-
-      }
-
-       
-    }
-
-</script> -->
+   
 
 </body>
 </html>
